// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartForm /> should cancel properly when editing 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 4px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-4 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 {
  height: 16px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-10:hover,
.emotion-10 .noop {
  border: 2px solid #ffffff;
}

.emotion-11 {
  padding-top: 8px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #808080;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-14 {
  width: 8px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited,
.emotion-15 .noop {
  background-color: #3A5DFF;
}

.emotion-15:hover,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <form
        action=""
        className="emotion-3"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-4"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-5"
        />
        <Listbox
          label="Metadata Type"
          onChange={[Function]}
          options={
            Object {
              "Analysis": Object {
                "Boonai": Object {
                  "tinyProxy": "analysis.boonai.tinyProxy",
                },
                "boonai-face-detection": "analysis.boonai-face-detection",
              },
              "Clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "Location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "Media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "Source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "System": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
          placeholder="Select Type"
          value=""
        />
        <div
          className="emotion-6"
        />
        <div
          className="emotion-7"
        >
          <label
            className="emotion-8"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-9"
          >
            <input
              className="emotion-10"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-11"
          >
             
          </div>
        </div>
        <div
          className="emotion-12"
        >
          <button
            className="emotion-13"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-14"
          />
          <button
            aria-disabled={true}
            className="emotion-15"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ChartForm /> should render properly without attribute 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 4px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-4 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 {
  height: 16px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-10:hover,
.emotion-10 .noop {
  border: 2px solid #ffffff;
}

.emotion-11 {
  padding-top: 8px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #808080;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-14 {
  width: 8px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited,
.emotion-15 .noop {
  background-color: #3A5DFF;
}

.emotion-15:hover,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <form
        action=""
        className="emotion-3"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-4"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-5"
        />
        <Listbox
          label="Metadata Type"
          onChange={[Function]}
          options={
            Object {
              "Analysis": Object {
                "Boonai": Object {
                  "tinyProxy": "analysis.boonai.tinyProxy",
                },
                "boonai-face-detection": "analysis.boonai-face-detection",
              },
              "Clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "Location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "Media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "Source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "System": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
          placeholder="Select Type"
          value=""
        />
        <div
          className="emotion-6"
        />
        <div
          className="emotion-7"
        >
          <label
            className="emotion-8"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-9"
          >
            <input
              className="emotion-10"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-11"
          >
             
          </div>
        </div>
        <div
          className="emotion-12"
        >
          <button
            className="emotion-13"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-14"
          />
          <button
            aria-disabled={true}
            className="emotion-15"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ChartForm /> should render properly without attribute 2`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 4px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-4 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 {
  height: 16px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-10:hover,
.emotion-10 .noop {
  border: 2px solid #ffffff;
}

.emotion-11 {
  padding-top: 8px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #808080;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-14 {
  width: 8px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited,
.emotion-15 .noop {
  background-color: #3A5DFF;
}

.emotion-15:hover,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <form
        action=""
        className="emotion-3"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-4"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-5"
        />
        <Listbox
          label="Metadata Type"
          onChange={[Function]}
          options={
            Object {
              "Analysis": Object {
                "Boonai": Object {
                  "tinyProxy": "analysis.boonai.tinyProxy",
                },
                "boonai-face-detection": "analysis.boonai-face-detection",
              },
              "Clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "Location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "Media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "Source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "System": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
          placeholder="type"
          value="system.type"
        />
        <div
          className="emotion-6"
        />
        <div
          className="emotion-7"
        >
          <label
            className="emotion-8"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-9"
          >
            <input
              className="emotion-10"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-11"
          >
             
          </div>
        </div>
        <div
          className="emotion-12"
        >
          <button
            className="emotion-13"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-14"
          />
          <button
            className="emotion-15"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
